--- a/app/components/Dashboard/dashboard.module.css
+++ b/app/components/Dashboard/dashboard.module.css
@@ -4,12 +4,32 @@
 
 .menu {
   min-height: 100vh;
+  padding: 20px;
   flex: 1;
   border-radius: 0 0 8px 0;
   background-color: var(--bgSoft);
-  padding: 20px;
 }
 .content {
   flex: 4;
   padding: 20px;
+}
+
+.wrapper {
+  margin-top: 20px;
+  display: flex;
+  gap: 20px;
+}
+.main {
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.cards {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+.side {
+  flex: 1;
 }
