new file:   app/auth.ts 	new file:   app/authconfig.ts 	modified:   app/components/Dashboard/Sidebar/Sidebar.tsx 	modified:   app/components/Login/Login.tsx 	modified:   app/components/Products/AddProduct/AddProduct.tsx 	modified:   app/components/Products/Products.tsx 	modified:   app/components/Products/SingleProduct/SingleProduct.tsx 	modified:   app/components/Products/products.module.css 	modified:   app/components/Users/AddUser/AddUser.tsx 	modified:   app/components/Users/Pagination/Pagination.tsx 	modified:   app/components/Users/Search/Search.tsx 	modified:   app/components/Users/SingleUser/SingleUser.tsx 	modified:   app/components/Users/Users.tsx 	modified:   app/components/Users/users.module.css 	modified:   app/dashboard/products/[id]/page.tsx 	modified:   app/dashboard/products/page.tsx 	modified:   app/dashboard/users/[id]/page.tsx 	modified:   app/dashboard/users/page.tsx 	new file:   app/lib/actions.ts 	new file:   app/lib/data.ts 	modified:   app/page.tsx 	new file:   app/types/index.ts 	new file:   middleware.ts 	modified:   package-lock.json 	modified:   package.json 	modified:   tsconfig.json

--- a/app/components/Products/products.module.css
+++ b/app/components/Products/products.module.css
@@ -31,7 +31,11 @@
   width: 100%;
 
   td {
+    max-width: 100px;
     padding: 12px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
@@ -45,6 +49,11 @@
   }
 }
 
+.buttons {
+  form {
+    display: inline;
+  }
+}
 .button {
   padding: 4px 8px;
   border: none;
