--- a/app/components/Users/users.module.css
+++ b/app/components/Users/users.module.css
@@ -45,6 +45,15 @@
   }
 }
 
+.buttons {
+  form {
+    display: inline;
+  }
+  input {
+    display: none;
+  }
+}
+
 .button {
   padding: 4px 8px;
   border: none;
